crates/tm-lang/tests/fixtures/tm-conformance-v2/reject/05_approval_marker.tm
-- expect: TM1001
@fs.patch! {patch: "x"}
